--- a/index.html
+++ b/index.html
@@ -6,18 +6,25 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      padding: 40px;
       text-align: center;
+      padding: 30px;
     }
-    button {
-      padding: 10px 20px;
+    input, button {
+      padding: 10px;
+      margin: 5px;
       font-size: 16px;
-      cursor: pointer;
     }
-    #output {
+    .hidden {
+      display: none;
+    }
+    .player-button {
+      display: block;
+      width: 200px;
+      margin: 10px auto;
+    }
+    .reveal {
+      font-size: 24px;
       margin-top: 30px;
-      font-size: 20px;
-      font-weight: bold;
     }
   </style>
 </head>
@@ -25,52 +32,112 @@
 
   <h1>Impostor Game</h1>
 
-  <button onclick="runGame()">Generate Word</button>
+  <!-- PLAYER SETUP -->
+  <div id="setup">
+    <h2>Enter Player Names</h2>
+    <input id="nameInput" placeholder="Player name">
+    <button onclick="addPlayer()">Add Player</button>
+    <ul id="playerList"></ul>
+    <button onclick="startGame()">Start Game</button>
+  </div>
 
-  <div id="output">Loading data...</div>
+  <!-- PLAYER SELECTION -->
+  <div id="playerSelect" class="hidden">
+    <h2>Select Your Name</h2>
+    <div id="playerButtons"></div>
+  </div>
+
+  <!-- ROLE REVEAL -->
+  <div id="revealScreen" class="hidden">
+    <h2 id="revealTitle"></h2>
+    <div class="reveal" id="revealText"></div>
+    <button onclick="backToSelection()">Done</button>
+  </div>
 
   <script>
+    let players = [];
+    let impostor = "";
+    let word = "";
+    let hint = "";
     let data = [];
 
-    // Load JSON file
+    // Load JSON
     fetch("Impostor.json")
-      .then(response => {
-        if (!response.ok) {
-          throw new Error("Failed to load Impostor.json");
-        }
-        return response.json();
-      })
-      .then(json => {
-        data = json;
-        document.getElementById("output").textContent = "Ready!";
-      })
-      .catch(error => {
-        document.getElementById("output").textContent =
-          "Error loading JSON file.";
-        console.error(error);
-      });
+      .then(res => res.json())
+      .then(json => data = json);
 
-    function runGame() {
-      if (data.length === 0) {
-        alert("Data not loaded yet!");
+    function addPlayer() {
+      const input = document.getElementById("nameInput");
+      const name = input.value.trim();
+      if (name && !players.includes(name)) {
+        players.push(name);
+        updatePlayerList();
+        input.value = "";
+      }
+    }
+
+    function updatePlayerList() {
+      const list = document.getElementById("playerList");
+      list.innerHTML = "";
+      players.forEach(p => {
+        const li = document.createElement("li");
+        li.textContent = p;
+        list.appendChild(li);
+      });
+    }
+
+    function startGame() {
+      if (players.length < 3) {
+        alert("At least 3 players required");
         return;
       }
 
-      // Pick random category
+      // Choose impostor
+      impostor = players[Math.floor(Math.random() * players.length)];
+
+      // Choose word + hint
       const categoryObj = data[Math.floor(Math.random() * data.length)];
       const category = Object.keys(categoryObj)[0];
       const wordDict = categoryObj[category];
-
-      // Pick random word
       const words = Object.keys(wordDict);
-      const word = words[Math.floor(Math.random() * words.length)];
-      const hint = wordDict[word];
+      word = words[Math.floor(Math.random() * words.length)];
+      hint = wordDict[word];
 
-      document.getElementById("output").innerHTML = `
-        <p><strong>Category:</strong> ${category}</p>
-        <p><strong>Word (knowers):</strong> ${word}</p>
-        <p><strong>Hint (impostor):</strong> ${hint}</p>
-      `;
+      document.getElementById("setup").classList.add("hidden");
+      document.getElementById("playerSelect").classList.remove("hidden");
+
+      createPlayerButtons();
+    }
+
+    function createPlayerButtons() {
+      const container = document.getElementById("playerButtons");
+      container.innerHTML = "";
+
+      players.forEach(player => {
+        const btn = document.createElement("button");
+        btn.textContent = player;
+        btn.className = "player-button";
+        btn.onclick = () => revealRole(player);
+        container.appendChild(btn);
+      });
+    }
+
+    function revealRole(player) {
+      document.getElementById("playerSelect").classList.add("hidden");
+      document.getElementById("revealScreen").classList.remove("hidden");
+
+      if (player === impostor) {
+        document.getElementById("revealTitle").textContent = "You are the IMPOSTOR";
+        document.getElementById("revealText").textContent = `Hint: ${hint}`;
+      } else {
+        document.getElementById("revealTitle").textContent = "You know the word";
+        document.getElementById("revealText").textContent = `Word: ${word}`;
+      }
+    }
+
+    function backToSelection() {
+      document.getElementById("revealScreen").classList.add("hidden");
+      document.getElementById("playerSelect").classList.remove("hidden");
     }
   </script>
 
